--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-    <!--Barra de navegacion-->
+   <!--Barra de navegacion-->
     <!-- Section 1 -->
     <section class="w-full px-8 text-gray-700 bg-black">
         <div class="container flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl">
@@ -42,23 +42,27 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="px-2 py-32 bg-white md:px-0">
+    <section class="px-2 py-10 bg-white md:px-0">
         <div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
             <div class="flex flex-wrap items-center sm:-mx-3">
                 <div class="w-full md:w-1/2 md:px-3">
                     <div
                         class="w-full pb-6 space-y-6 sm:max-w-md lg:max-w-lg md:space-y-4 lg:space-y-8 xl:space-y-9 sm:pr-5 lg:pr-0 md:pb-0">
                         <h1
-                            class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl">
-                            <span class="block xl:inline">Useful Tools to</span>
-                            <span class="block text-indigo-600 xl:inline">Help You Build Faster.</span>
+                            class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl md:text-3xl lg:text-4xl xl:text-4xl">
+                            <span class="block xl:inline">Gestión Inteligente de </span>
+                            <span class="block text-indigo-600 xl:inline">Visitas Técnicas y Prácticas Pre-Profesionales
+                            </span>
+                            </span>
                         </h1>
-                        <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been
-                            easier to build beautiful websites that convey your message and tell your story.</p>
+                        <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">Optimiza el
+                            control de tus visitas técnicas y prácticas pre-profesionales con nuestra plataforma fácil
+                            de usar. Accede a información en tiempo real, mejora la comunicación y toma decisiones más
+                            informadas para el éxito de tus estudiantes.</p>
                         <div class="relative flex flex-col sm:flex-row sm:space-x-4">
-                            <a href="#_"
+                            <a href="inicioSesion.html"
                                 class="flex items-center w-full px-6 py-3 mb-3 text-lg text-white bg-indigo-600 rounded-md sm:mb-0 hover:bg-indigo-700 sm:w-auto">
-                                Try It Free
+                                Comenzar
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round">
@@ -66,9 +70,9 @@
                                     <polyline points="12 5 19 12 12 19"></polyline>
                                 </svg>
                             </a>
-                            <a href="#_"
+                            <a href="index.html#masInformacion"
                                 class="flex items-center px-6 py-3 text-gray-500 bg-gray-100 rounded-md hover:bg-gray-200 hover:text-gray-600">
-                                Learn More
+                                Aprender más
                             </a>
                         </div>
                     </div>
@@ -76,7 +80,7 @@
                 <div class="w-full md:w-1/2">
                     <div class="w-full h-auto overflow-hidden rounded-md shadow-xl sm:rounded-xl">
                         <img
-                            src="https://images.unsplash.com/photo-1498049860654-af1a5c566876?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+                            src="img/0008-fotoHero.jpg">
                     </div>
                 </div>
             </div>
@@ -84,6 +88,79 @@
     </section>
 
 
+
+    <div class="relative bg-gray-800 px-6 p-6" id="masInformacion">
+        <div class="absolute inset-0">
+            <div class="h-1/3 bg-gray-800 sm:h-2/3"></div>
+        </div>
+        <div class="relative mx-auto max-w-7xl">
+            <div class="text-center">
+                <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">¿Por qué seleccionar nuestro programa?</h2>
+            </div>
+            <div class="mx-auto mt-12 grid max-w-lg gap-5 lg:max-w-none lg:grid-cols-3">
+
+                <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+                    <div class="flex-shrink-0">
+                        <img class="h-48 w-full object-cover" src="img/0006-Control-seguimineto.jpg" alt="">
+                    </div>
+                    <div class="flex flex-1 flex-col justify-between bg-white p-6">
+                        <div class="flex-1">
+                            <a href="#" class="mt-2 block">
+                                <p class="text-xl font-semibold text-gray-900">Optimización del Seguimiento y Control
+                                </p>
+                                <p class="mt-3 text-base text-gray-500">La aplicación web permite centralizar y
+                                    organizar toda la información sobre las visitas técnicas y prácticas
+                                    pre-profesionales, lo que facilita el seguimiento detallado y la evaluación de cada
+                                    unidad de vinculación. De esta manera, se reduce la carga administrativa y se
+                                    optimiza la gestión del tiempo, asegurando que las actividades se realicen de manera
+                                    más eficiente.</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+                    <div class="flex-shrink-0">
+                        <img class="h-48 w-full object-cover"
+                            src="img/0009-mejroacomunicaion.jpg"
+                            alt="">
+                    </div>
+                    <div class="flex flex-1 flex-col justify-between bg-white p-6">
+                        <div class="flex-1">
+                            <a href="#" class="mt-2 block">
+                                <p class="text-xl font-semibold text-gray-900">Mejora de la Comunicación entre las Partes Involucradas
+                                    Real</p>
+                                <p class="mt-3 text-base text-gray-500">Con una plataforma web centralizada, todos los actores (estudiantes, tutores, administradores) pueden interactuar fácilmente. Se pueden incluir funcionalidades como mensajes internos, notificaciones, y actualizaciones automáticas, lo que mejora la comunicación y reduce los malentendidos, asegurando que todos estén al tanto de las fechas, actividades y requisitos.</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+                    <div class="flex-shrink-0">
+                        <img class="h-48 w-full object-cover" src="img/0007-tomdesiciones.jpg" alt="">
+                    </div>
+                    <div class="flex flex-1 flex-col justify-between bg-white p-6">
+                        <div class="flex-1">
+                            <a href="#" class="mt-2 block">
+                                <p class="text-xl font-semibold text-gray-900">Mejora en la Toma de Decisiones y
+                                    Planificación</p>
+                                <p class="mt-3 text-base text-gray-500">Al tener los datos bien organizados y fácilmente
+                                    accesibles, los responsables del programa de prácticas pueden tomar decisiones más
+                                    informadas sobre la asignación de visitas, ajustes en los planes de formación y
+                                    necesidades de recursos. Además, se pueden generar informes detallados para analizar
+                                    el progreso y el impacto de las actividades de vinculación, lo que ayuda en la
+                                    planificación futura.
+
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
 </body>
