--- a/views/index.ejs
+++ b/views/index.ejs
@@ -162,6 +162,35 @@
         </div>
     </div>
 
+    <footer class="flex flex-col space-y-2 justify-center  bg-black text-white pt-2 pb-2">
+        <nav class="flex justify-center flex-wrap gap-6 font-medium">
+            <a class="hover:text-gray-300" href="index.html">Inicio</a>
+            <a class="hover:text-gray-300" href="#">Acerca de nosotros</a>
+            <a class="hover:text-gray-300" href="#">Servicios</a>
+            <a class="hover:text-gray-300" href="#">Contacto</a>
+        </nav>
+    
+        <div class="flex justify-center space-x-5">
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/ffffff/facebook-new.png" />
+            </a>
+            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/ffffff/linkedin-2.png" />
+            </a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/ffffff/instagram-new.png" />
+            </a>
+            <a href="https://messenger.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/ffffff/facebook-messenger--v2.png" />
+            </a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/ffffff/twitter.png" />
+            </a>
+        </div>
+        <p class="text-center font-medium text-gray-300">&copy; 2024 Itsqmet Ltd. Todos los derechos reservados.</p>
+    </footer>
+
+
 
 </body>
 
